--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TodoList</title>
+    <link rel="icon" type="image/x-icon" href="https://kiriqua.com/assets/images/logo/logo.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="https://kiriqua.com/assets/images/logo/logo.png"/>
     <link rel="stylesheet" href="./style.css" type="text/css">
+    <script src="https://unpkg.com/akar-icons-fonts"></script>
 </head>
 <body>
     <div class="container">
@@ -25,7 +28,7 @@
                 </ul>
                 <div class="list_footer">
                     <p>0 個待完成項目</p>
-                    <a href="#">清除已完成項目</a>
+                    <a href="">清除已完成項目</a>
                 </div>
             </div>
         </div>
