--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="待辦清單"><meta name="author" content="oF"><title>TodoList</title><script defer="defer" src="/TodoList/static/js/main.9751248b.js"></script><link href="/TodoList/static/css/main.209f98c1.css" rel="stylesheet"></head><body><div class="container" id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="待辦清單">
+    <meta name="author" content="oF">
+    <title>TodoList</title>
+  <link rel="icon" href="favicon.ico"><script defer src="./js/bundle.js"></script><link href="./css/style.css" rel="stylesheet"></head>
+
+  <body>
+    <div class="container" id="root"></div>
+  </body>
+
+</html>
